// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mergeProps return deleteComment when creator 1`] = `
Object {
  "canModerate": true,
  "comment": Object {
    "id": 34,
  },
  "deleteComment": [Function],
  "editComment": null,
  "isCreator": true,
  "removeComment": null,
  "updateComment": [Function],
}
`;

exports[`mergeProps returns nothing when neither creator nor moderator 1`] = `
Object {
  "canModerate": false,
  "comment": Object {
    "id": 34,
  },
  "deleteComment": null,
  "editComment": null,
  "isCreator": false,
  "removeComment": null,
  "updateComment": null,
}
`;

exports[`mergeProps returns removeComment when moderator 1`] = `
Object {
  "canModerate": true,
  "comment": Object {
    "id": 34,
  },
  "deleteComment": null,
  "editComment": null,
  "removeComment": [Function],
  "updateComment": null,
}
`;
